--- a/3DPictureViewer.vcxproj
+++ b/3DPictureViewer.vcxproj
@@ -95,6 +95,8 @@
     <ClCompile Include="pictureshader.cpp" />
     <ClCompile Include="scene.cpp" />
     <ClCompile Include="shader.cpp" />
+    <ClCompile Include="shadowmapfbo.cpp" />
+    <ClCompile Include="shadowmapshader.cpp" />
     <ClCompile Include="texture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -124,10 +126,13 @@
   <ItemGroup>
     <ClInclude Include="camera.h" />
     <ClInclude Include="GeneratedFiles\ui_mainwidget.h" />
+    <ClInclude Include="light.h" />
     <ClInclude Include="picture.h" />
     <ClInclude Include="pictureshader.h" />
     <ClInclude Include="scene.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="shadowmapfbo.h" />
+    <ClInclude Include="shadowmapshader.h" />
     <ClInclude Include="texture.h" />
   </ItemGroup>
   <ItemGroup>
