--- a/3DPictureViewer.vcxproj
+++ b/3DPictureViewer.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="action.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="GeneratedFiles\Debug\moc_mainwidget.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -98,6 +99,7 @@
     <ClCompile Include="shadowmapfbo.cpp" />
     <ClCompile Include="shadowmapshader.cpp" />
     <ClCompile Include="texture.cpp" />
+    <ClCompile Include="tool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwidget.h">
@@ -124,6 +126,7 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="action.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="GeneratedFiles\ui_mainwidget.h" />
     <ClInclude Include="light.h" />
@@ -134,6 +137,7 @@
     <ClInclude Include="shadowmapfbo.h" />
     <ClInclude Include="shadowmapshader.h" />
     <ClInclude Include="texture.h" />
+    <ClInclude Include="tool.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwidget.qrc">
