--- a/3DPictureViewer.vcxproj
+++ b/3DPictureViewer.vcxproj
@@ -68,7 +68,7 @@
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>$(QTDIR)\lib;Dependencies\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>false</GenerateDebugInformation>
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="action.cpp" />
+    <ClCompile Include="billboardshader.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="GeneratedFiles\Debug\moc_mainwidget.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -104,6 +105,7 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwidget.cpp" />
+    <ClCompile Include="particleysytem.cpp" />
     <ClCompile Include="picture.cpp" />
     <ClCompile Include="picturewidget.cpp" />
     <ClCompile Include="pictureshader.cpp" />
@@ -140,9 +142,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="action.h" />
+    <ClInclude Include="billboardshader.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="GeneratedFiles\ui_mainwidget.h" />
     <ClInclude Include="light.h" />
+    <ClInclude Include="particleysytem.h" />
     <ClInclude Include="picture.h" />
     <CustomBuild Include="picturewidget.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
